# xorfiles

./: Cargo.toml  README.md
benchmarks/: xorfiles.py  xorfiles.rb
src/: main.rs
