[package]
name = "xorfiles"
version = "0.1.1"
authors = ["David Young <david@thedavidyoung.co.uk>"]
edition = "2018"
repository = "https://github.com/sciguy16/xorfiles"
description = "A utility to XOR two files on the command line"
license = "GPL-3.0-or-later"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.9"
